<resources>
    <string name="app_name">chekit_ver_1</string>

    <!--main_bottom-->
    <string name="title_home">홈</string>
    <string name="title_check">비대면 진료</string>
    <string name="title_talk">채널톡</string>
    <string name="title_settings">환경설정</string>

    <!--main_container-->
    <string name="text_button1">성병 자가 테스트</string>
    <string name="text_button2">진료 내역</string>
    <string name="text_button3">검사 기록</string>
    <string name="text_button4">cheKIT</string>
    <string name="text_button5">비대면 진료</string>

    <!--simple login page-->
    <string name="text_warning"><u>비밀번호가 틀렸습니다. 다시 시도해주세요</u></string>
    <string name="login_passwd_reset"><u>비밀번호 재설정</u></string>

    <!--join page-->
    <string name="email">Email</string>
    <string name="email_warning">이미 가입된 계정입니다.</string>
    <string name="passwd">Password</string>
    <string name="passwd_rule">6자리 이상 영문, 숫자, 특수기호 포함</string>
    <string name="name">name</string>
    <string name="birth_date">birth date</string>
    <string name="phone_number">phone number</string>
    <string name="phone_warning">인증번호가 틀렸습니다.</string>

    <string name="re_request_certify">재요청</string>
    <string name="request_certify">인증요청</string>

    <string name="join_all_agree">모두 동의합니다.</string>
    <string name="join_agree_1">동의사항1(필수)</string>
    <string name="join_agree_2">동의사항2(필수)</string>
    <string name="join_agree_3">동의사항3(필수)</string>
    <string name="join_agree_4">동의사항4(필수)</string>

    <string name="join">회원가입</string>
    <string name="checking_join">회원이신가요?</string>
    <string name="join_to_login"><u>로그인</u></string>

    <!--self test page-->
    <string name="self_test">성병 자가진단 검사</string>

    <!--self test result page-->
    <string name="text_self_test_result">자가 진단 결과</string>
    <string name="self_test_result">6개의 증상 중\n총 %d개의 증상을 겪고 계시네요.\n\n정확한 검진을 위해\n검사 및 진료를 권해드립니다.</string>

    <string name="qna_1">성병의 주요증상은 무엇인가요?</string>
    <string name="qna_2">성병은 어떻게 감염되나요?</string>
    <string name="qna_3">성병은 어떻게 검사하나요?</string>
    <string name="qna_4">성병은 어떻게 치료하나요?</string>

    <!--test_record_management page-->
    <string name="title_record_management">나의 검사기록</string>

</resources>