<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checked="true"/>

    <item
        android:id="@+id/main_check"
        android:icon="@drawable/ic_baseline_local_hospital_24"
        android:title="@string/title_check"
        app:showAsAction="always"
        android:enabled="true"/>

    <item
        android:id="@+id/main_talk"
        android:icon="@drawable/ic_baseline_add_comment_24"
        android:title="@string/title_talk"
        app:showAsAction="always"
        android:enabled="true"/>

    <item
        android:id="@+id/main_settings"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_settings"
        app:showAsAction="always"
        android:enabled="true"/>

</menu>