<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <include layout="@layout/main_top"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"

                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_1"
                android:elevation="100dp"
                android:text="@string/text_button1"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"

                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_1"
                    android:elevation="100dp"
                    android:text="@string/text_button2"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/main_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_1"
                    android:elevation="100dp"
                    android:text="@string/text_button3"
                    android:textColor="#000000" />

            </LinearLayout>

            <Button
                android:id="@+id/main_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"

                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_1"
                android:elevation="100dp"
                android:text="@string/text_button4"
                android:textColor="#000000" />

            <Button
                android:id="@+id/main_button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"

                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_1"
                android:elevation="100dp"
                android:text="@string/text_button5"
                android:textColor="#000000" />

            <Button
                android:id="@+id/main_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"

                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_1"
                android:elevation="100dp"
                android:text="광고 배너 나오는 곳"
                android:textColor="#000000" />

        </LinearLayout>

    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#ffffff"
        app:itemIconTint="@drawable/navigation_select_style"
        app:itemTextColor="@drawable/navigation_select_style"
        app:menu="@menu/main_bottom">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>